# ks-notes

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  markdown.rs  models.rs  state.rs  views.rs
src/db/: memos.rs  mod.rs  resources.rs  sections.rs  sessions.rs  settings.rs  tokens.rs  users.rs
src/routes/: api.rs  auth_routes.rs  export_routes.rs  memo_routes.rs  mod.rs  pages.rs  resource_routes.rs  sections_routes.rs  settings_routes.rs  statics.rs
static/: app.css  app.js
templates/: admin.html  base.html  error.html  export.html  index.html  login.html  memo_page.html  register.html  settings.html
templates/partials/: activity_matrix.html  memo_card.html  memo_edit_form.html  memo_feed_items.html  memo_list.html  sidebar.html  tag_sidebar.html  upload_chip.html
tests/: app.rs
