[package]
name = "ks-notes"
version = "0.2.2"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
askama = "0.16.0"
axum = { version = "0.8.9", features = ["multipart"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
comrak = { version = "0.52.0", default-features = false }
data-encoding = "2.11.0"
deadpool-sqlite = "0.13.0"
futures-util = "0.3.31"
rand = "0.10.1"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
time = { version = "0.3.48", features = ["formatting", "macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "signal", "macros"] }
tower-http = { version = "0.6.11", features = ["trace", "limit"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
